feat: add lists

--- a/index.html
+++ b/index.html
@@ -26,29 +26,32 @@
     </p>
     <br>
     <em>skills:</em>
+    <br>
+    Layout and styling:
     <ul>
-        <span>Layout and styling:</span> 
         <li>HTML</li>
         <li>CSS</li>
         <li>Bootstrap 3-4</li>
         <li>Flexbox</li>
     </ul>
+    <br>
+    Programming languange:
     <ul>
-        <span>Programming languange:</span>
         <li>Javascript basics</li>
     </ul>
+    <br>
+    Framework:
     <ul>
-        <span>Framework:</span>
         <li>React.js</li>
         <li>VUE.js</li>
     </ul>
+    <br>
+    Version control system:
     <ul>
-        <span>Version control system:</span> 
         <li>Github</li>
     </ul>
-    <ul><span>NPM, YARN usage</span> 
-    </ul>
-
+    <br>
+    NPM, YARN usage
     <em>Example of code:</em>
     <p>React-component Button, that change the text on button:</p>
     <textarea class="code" disabled>
@@ -79,20 +82,21 @@
     <p>
         <em>Expirience:</em>
     </p>
+    <br>
+    My pet-projects:
     <ul> 
-        <span>My pet-projects:</span> 
-        <li>Photo gallery on HTML and Bootstrap 3:</li>
-        <li>Zoohostel on HTML and Bootstrap 4:</li>
-        <li>Snake game on JS and canvas:</li>
-        <li>Blog on react.js:</li>
-    </ul>
-    <em>Education:</em>
-    <ul>
-        <span>My pet-projects:</span> 
         <li>Photo gallery on HTML and Bootstrap 3:<a href="https://github.com/Greenpaw/photo-gallery"> Link to repo Github</a></li>
         <li>Zoohostel on HTML and Bootstrap 4:<a href="https://github.com/Greenpaw/zoohostel"> Link to repo Github</a></li>
         <li>Snake game on JS and canvas:<a href="https://github.com/Greenpaw/snake-game"> Link to repo Github</a></li>
         <li>Blog on react.js:<a href="https://github.com/Greenpaw/react-blog"> Link to repo Github</a></li>
+    </ul>
+    <em>Education:</em>
+    <ul>
+        <li>Perm aviation college;</li>
+        <li>Perm National Research Polytechnic University;</li>
+        <li>Udemy course: ‘The Web Developer Bootcamp’;</li>
+        <li>React.js: https://learn.javascript.ru/screencast/react;</li>
+        <li>VUE.js: https://scrimba.com/p/pXKqta/czPNaUr;</li>
     </ul>
     <em>English level:</em>
     A-2, pre-intermediate
