fix: fix links on courses

--- a/index.html
+++ b/index.html
@@ -85,18 +85,18 @@
     <br>
     My pet-projects:
     <ul> 
-        <li>Photo gallery on HTML and Bootstrap 3:<a href="https://github.com/Greenpaw/photo-gallery"> Link to repo Github</a></li>
-        <li>Zoohostel on HTML and Bootstrap 4:<a href="https://github.com/Greenpaw/zoohostel"> Link to repo Github</a></li>
-        <li>Snake game on JS and canvas:<a href="https://github.com/Greenpaw/snake-game"> Link to repo Github</a></li>
-        <li>Blog on react.js:<a href="https://github.com/Greenpaw/react-blog"> Link to repo Github</a></li>
+        <li>Photo gallery on HTML and Bootstrap 3: <a href="https://github.com/Greenpaw/photo-gallery">Link to repo Github</a></li>
+        <li>Zoohostel on HTML and Bootstrap 4: <a href="https://github.com/Greenpaw/zoohostel">Link to repo Github</a></li>
+        <li>Snake game on JS and canvas: <a href="https://github.com/Greenpaw/snake-game">Link to repo Github</a></li>
+        <li>Blog on react.js: <a href="https://github.com/Greenpaw/react-blog">Link to repo Github</a></li>
     </ul>
     <em>Education:</em>
     <ul>
         <li>Perm aviation college;</li>
         <li>Perm National Research Polytechnic University;</li>
         <li>Udemy course: ‘The Web Developer Bootcamp’;</li>
-        <li>React.js: https://learn.javascript.ru/screencast/react;</li>
-        <li>VUE.js: https://scrimba.com/p/pXKqta/czPNaUr;</li>
+        <li>React.js: <a href ="https://learn.javascript.ru/screencast/react">React.JS screencast</a></li>
+        <li>VUE.js: <a href = "https://scrimba.com/p/pXKqta/czPNaUr">Scrimba.com</a></li>
     </ul>
     <em>English level:</em>
     A-2, pre-intermediate
